@@ -137,7 +137,7 @@ func void B_CloseTopics_Mattes ()
 	B_CloseTopic	(TOPIC_FajethKillSnapper, MIS_Fajeth_Kill_Snapper,0, 3); 
 	
 	B_CloseTopic	(Topic_OricBruder, 0,OricBruder, 3);
-	B_CloseTopic	(TopicBrutusKasse, 0,MIS_BrutusKasse, 6);
+	B_CloseTopic	(TopicBrutusKasse, MIS_BrutusKasse,0, 6);
 	B_CloseTopic	(Topic_TengronRing, 0,TengronRing, 6); 
 	B_CloseTopic	(TOPIC_BringMeat, MIS_Engor_BringMeat,0,6); 
 	B_CloseTopic	(TOPIC_BilgotEscort, MIS_RescueBilgot,TschuessBilgot,6); 
